--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,6 +16,23 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ForMuskan"
         tools:targetApi="31">
+        <activity
+            android:name=".ColorHerWorldActivity"
+            android:exported="false" />
+
+        <receiver
+            android:name=".LoveMessageWidget"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/love_widget_info" />
+        </receiver>
+        <receiver android:name=".HourlyNotificationReceiver" />
+
         <activity
             android:name=".VoiceMessageActivity"
             android:exported="false" />
